# rust-rocket-mysql-starter

./: .env.example  Cargo.toml  README.md  Rocket.toml
migrations/2020-04-01-164603_users/: up.sql
migrations/2020-04-01-164617_activities/: up.sql
migrations/2020-04-01-164631_quests/: down.sql  up.sql
migrations/2020-04-05-073807_add_index_to_users/: down.sql  up.sql
scripts/: crud-generator.sh  nullable-id.sh  watch.sh
scripts/tpl/: controller.tpl  model.tpl
src/: db.rs  main.rs  schema.rs
src/controllers/: user.rs
src/models/: mod.rs  user.rs
src/utils/: catcher.rs  error.rs  macros.rs  mod.rs  response.rs
